recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:9: error: type mismatch;
 found   : Double
 required: Int
  current(angle);
          ^